Fix Chaperone and refactor confirm_delete js

--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -214,20 +214,9 @@
 
 
 @section Scripts {
+    <script src="https://app.getchaperone.com/embed/chaperone.js"></script>
+    @Scripts.Render("~/bundles/chaperone")
     @Scripts.Render("~/bundles/select2")
-
-    <script src="https://cdn.getchaperone.com/embed/chaperone.js"></script>
-    <script type="text/javascript">
-        Chaperone.init({
-            "api_key": "lBuTEvIH43bg5g",
-            //"trigger": {
-            //    "element": "#btnTour",
-            //    "event": "click",
-            //    "tutorial": 4072
-            //}
-        });
-    </script>
-
 
     <script type="text/javascript">
         $(document).ready(function () {
