--- a/EECIP/Views/Forum/Index.cshtml
+++ b/EECIP/Views/Forum/Index.cshtml
@@ -12,14 +12,7 @@
     @*@RenderSection("side", false)*@
 </div>
 
-<script src="https://cdn.getchaperone.com/embed/chaperone.js"></script>
-<script type="text/javascript">
-        Chaperone.init({
-            "api_key": "lBuTEvIH43bg5g",
-            //"trigger": {
-            //    "element": "#btnTour",
-            //    "event": "click",
-            //    "tutorial": 4074
-            //}
-        });
-</script>
+@section Scripts {
+    <script src="https://app.getchaperone.com/embed/chaperone.js"></script>
+    @Scripts.Render("~/bundles/chaperone")
+}
