Cleanup multiple project URLs

--- a/EECIP/Views/Dashboard/ProjectDetails.cshtml
+++ b/EECIP/Views/Dashboard/ProjectDetails.cshtml
@@ -92,7 +92,7 @@
                     </a>
                 </div>
             </div>
-            <div class="panel-body" style="max-height: 500px;overflow-y: auto;">
+            <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
@@ -161,56 +161,33 @@
                         </div>
                     </div>
                 </div>
-                @*<div class="row">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label>Project URL</label>
-                    <span class="input-icon input-icon-right">
-                        @Html.TextBoxFor(model => model.project.PROJECT_URL, new { @class = "form-control", @maxlength = "200" })
-                        <i class="clip-question-2 input-tooltip popovers" data-content="Provide a link to the project's website" data-placement="left" data-trigger="hover" data-rel="popover" data-original-title=""></i>
-                    </span>
-                    @Html.ValidationMessageFor(model => model.project.PROJECT_URL)
-                    <span class="help-block"><i class="clip-info"></i> Provide a link to the project's website</span>
-                </div>
-            </div>
-        </div>*@
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group">                        
-                            <input id="btnAdd" type="button" value="Add Project URL" onclick="AddProjectURL();" />
-                            <br />
-                            <br />
+                        <div class="form-group">
                             <div id="divurl">
-                                <!--Textboxes will be added here -->
-                                @{
-                                    var index = 0;
-                                }
-                                @foreach (var item in Model.sProjectUrlList)
-                                {
-
-                                    var sProjectUrlLabel = "sProjectUrlList" + index + "_Name";
-                                    var sProjectUrl = "sProjectUrlList" + index + "_PROJECT_URL";
-                                    var sProjectUrlName = "sProjectUrlList[" + index + "].PROJECT_URL";
-
-                                    var sProjectDescLabel = "sProjectUrlList" + index + "_DESC";
-                                    var sProjectDesc = "sProjectUrlList" + index + "_PROJ_URL_DESC";
-                                    var sProjectDescName = "sProjectUrlList[" + index + "].PROJ_URL_DESC";
-
-                                <span>
-                                <label for=@sProjectUrlLabel>URL</label>
-                                <input id=@sProjectUrl class="text-box single-line"
-                                       type="text" value=@item.PROJECT_URL name=@sProjectUrlName>
-
-                                <label for=@sProjectDescLabel>Description</label>
-                                <input id=@sProjectDesc class="text-box single-line"
-                                       type="text" value="@item.PROJ_URL_DESC" name=@sProjectDescName>
-
-                                <a href="#" onclick="RemoveTextBox(this)">Remove</a>
+                                <input id="btnAdd" type="button" value="Add Project URL(s)" class="btn btn-sm" onclick="AddProjectURL();" />
+                                <i class="clip-question-2 input-tooltip popovers" data-content="Provide a link to the project's website or documentation" data-placement="left" data-trigger="hover" data-rel="popover" data-original-title=""></i>
                                 <br /><br />
-                                </span>
-                                index++;
+                                <!--Textboxes will be added here -->
+                                @for (var i = 0; i < Model.sProjectUrlList.Count(); i++) 
+                                {   
+                                    <div class="row urlrow">
+                                        <div class="col-md-5">
+                                            <label>Project URL</label>
+                                            @Html.TextBoxFor(modelItem => Model.sProjectUrlList[i].PROJECT_URL, new { @class = "form-control projurl", @maxlength = "200" })
+                                        </div>
+                                        <div class="col-md-5">
+                                            <label>Description</label>
+                                            @Html.TextBoxFor(modelItem => Model.sProjectUrlList[i].PROJ_URL_DESC, new { @class = "form-control projurldesc" })
+                                        </div>
+                                        <div class="col-md-2" style="padding-top: 25px;">
+                                            <a href="#" onclick="RemoveTextBox(this)">Remove</a>
+                                        </div>
+                                    </div>
                                 }
-                            </div>                          
+                            </div>
+
+
                         </div>
                     </div>
                 </div>               
@@ -421,7 +398,6 @@
                 if ($(a).text() == 'Yes: Major Component' || $(a).text() == 'Yes: Minor Component') {
                     $(b).show();
 
-
                     if (d == true) {
                         var select = $('#SelectedFeatures');
                         var option = $('<option></option>').
@@ -437,35 +413,46 @@
                 }
             }
         });
-       
+
+
         function RemoveTextBox(button) {
-            $(button).parent().remove();
+            $(button).parent().parent().remove();
+
+            //refresh IDs
+            var j = 0;
+            $("#divurl").find(".urlrow").each(function (i) {
+                console.log(j);
+                $(this).find(".projurl").attr('id', 'sProjectUrlList_' + j + '__PROJECT_URL');
+                $(this).find(".projurl").attr('name', 'sProjectUrlList[' + j + '].PROJECT_URL');
+                $(this).find(".projurldesc").attr('id', 'sProjectUrlList_' + j + '__PROJ_URL_DESC');
+                $(this).find(".projurldesc").attr('name', 'sProjectUrlList[' + j + '].PROJ_URL_DESC');
+                j++;
+            });
         }
        
         function AddProjectURL() {
             var m = $('#divurl input:last').attr('name');
             var index = 0;
-            var indexnew = 0
+
             if (m != null && m.length > 0) {
                 index = m.split('sProjectUrlList[')[1].replace('].PROJ_URL_DESC', '');
                 index++;
             }
 
-            var html = '<span>'+
-                '<label for=\"sProjectUrlList' + index + '_Name\">URL</label>' +
-                '<input id=\"sProjectUrlList' + index + '_PROJECT_URL\" class=\"text-box single-line\"' +
-                ' type=\"text\" value=\"\" name=\"sProjectUrlList[' + index + '].PROJECT_URL\">' +
-
-                '<label for=\"sProjectUrlList' + index + '_DESC\">Description</label>' +
-                '<input id=\"sProjectUrlList' + index + '_PROJ_URL_DESC\" class=\"text-box single-line\"' +
-                ' type=\"text\" value=\"\" name=\"sProjectUrlList[' + index + '].PROJ_URL_DESC\">' +
-
-                '<a href="\#"\ onclick=\"RemoveTextBox(this)\">Remove</a>'+              
-                '<br/><br/></span>';
-
+            var html = '<div class="row urlrow">' +
+                '<div class="col-md-5">' +
+                '    <label>Project URL</label>' +
+                '    <input id=\"sProjectUrlList' + index + '_PROJECT_URL\" class=\"form-control\" type=\"text\" value=\"\" name=\"sProjectUrlList[' + index + '].PROJECT_URL\">' +
+                '</div>' +
+                '<div class="col-md-5">' +
+                '     <label>Description</label>' +
+                '     <input id=\"sProjectUrlList' + index + '_PROJ_URL_DESC\" class=\"form-control\" type=\"text\" value=\"\" name=\"sProjectUrlList[' + index + '].PROJ_URL_DESC\">' +
+                '</div>' +
+                '<div class="col-md-2" style="padding-top: 25px;">' +
+                '     <a href="\#"\ onclick=\"RemoveTextBox(this)\">Remove</a>' +
+                '</div></div>';
 
             $('#divurl').append(html);
-
         };
     </script>
 }
