cleanup export import and governance split from ref agencies

--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -188,6 +188,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="form-field-select-4">Are you a Node Administrator?</label>
+                                <i class="clip-question-2 input-tooltip popovers" data-content="Indicates if this person is designated as the Exchange Network Node Administrator contact for the State/Tribe" data-placement="right" data-trigger="hover" data-rel="popover" data-original-title="Exchange Network Node Administrator"></i>
                                 @Html.CheckBox("NodeAdmin", Model.NodeAdmin ?? false, new { @class = "checkbox" })
                             </div>
                         </div>
