1. enhance forum to include category name in topics 2. mod forum appearance - little more compact; improve category listing page 3. fixing bug exclude from badges

--- a/EECIP/Content/Site.css
+++ b/EECIP/Content/Site.css
@@ -713,7 +713,7 @@ ul.main-navigation-menu > li.active > a {
 }
 
 
-/*************************************************************************************************************************************************/
+
 /*************************************************************************************************************************************************/
 /***********************FORUM STYLING ************************************************************************************************************/
 /*************************************************************************************************************************************************/
@@ -1092,7 +1092,7 @@ span.tag a, span.tag a:visited {
 }
 
 .topicrow {
-    padding: 15px;
+    padding: 15px 0 0 15px;
     border-bottom: solid #f2f2f2 1px;
 }
 
