--- a/EECIP/Views/Forum/_Topic.cshtml
+++ b/EECIP/Views/Forum/_Topic.cshtml
@@ -2,16 +2,14 @@
 @model EECIP.App_Logic.DataAccessLayer.TopicOverviewDisplay
 
 <div class="topicrow topicsticky-@(Model._topic.IsSticky.ToString().ToLower()) topiclocked-@(Model._topic.IsLocked.ToString().ToLower()) topicsolved-@(Model._topic.Solved.ToString().ToLower())">
-
     <div class="rowcreater hidden-xs">
         <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model._topic.MembershipUser_Id })">
             <div class="circle-tile-heading" style="display:inline-grid; background-image:url(/Content/Images/Users/@(Model._topic.MembershipUser_Id).png)"  alt="@Model.topicCreator">
             </div>
         </a>
     </div>
-
     <div class="rowdetails"  style="margin-left:90px;">
-        @*<p class="category categorysolved@(Model._topic.Solved.ToString().ToLower())" style=" ">Category: <a href="#">Category Name</a></p>*@
+        <p class="category" style=" ">Category: <a href="@Url.Action("ShowCategory","Forum", new { slug = Model.CategorySlug })">@Model.CategoryName</a></p>
         <h3>
             <a title="#" href="@Url.Action("ShowTopic", "Forum", new { slug = Model._topic.Slug })">
                 @if (Model._topic.IsSticky)
